Fix(7 of july) fixing the color of the text when hover and text

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -60,7 +60,7 @@
                   Delete Preset
                 </li>
                 <li class="dropdown-item" (click)="clearFilter()">
-                  Clear presets
+                  Clear Presets
                 </li>
               </ul>
             </div>
@@ -264,7 +264,7 @@
                   Delete Preset
                 </li>
                 <li class="dropdown-item" (click)="clearFilter()">
-                  Clear presets
+                  Clear Presets
                 </li>
               </ul>
             </div>
