--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -221,6 +221,7 @@ select {
   .select-item {
     width: 40%;
     margin-right: 2rem;
+    background-color: #333333;
     select {
       height: 28px;
       border:none;
@@ -482,7 +483,6 @@ ul li ul {
 ul li.active ul {
   display: block; /* Show the list when class 'active' is added to the li */ 
   color: red;
-  
 }
 .dropdown-toggle::after {
   display: none;
@@ -492,6 +492,9 @@ ul li.active ul {
 }
 .dropdown-item {
   color: #dddddd;
+}
+.dropdown-item:hover {
+  color: #333333;
 }
 
 ::ng-deep .modal-dialog {
