--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -25,7 +25,7 @@
                   Presets
                 </option>
                 <option
-                  class="select-options"
+                  class="select-options list-option"
                   *ngFor="let pre of preSelectList; let i2 = index"
                   [value]="pre?.id"
                 >
