--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -18,8 +18,8 @@
                 <ion-item> -->
               <ion-select
                 interface="popover"
-                placeholder="Select fruit"
-                [(ngModel)]="presetSelected"
+                placeholder="Select"
+                [(ngModel)]="selectedPresetId"
                 (ionChange)="onPreselectDDLChange($event)"
                 id="presets-select"
                 class="select-class"
@@ -81,9 +81,9 @@
                   (click)="updateCurrentPreset( 
                   this.searchFilterForm,
                   this.allSearch(),
-                  this.findInPersistanDataByFilterName(this.searchParam),
+                  this.findInPersistanDataByFilterName(this.currentPresetName),
                   this.preSelectList,
-                  this.searchParam
+                  this.currentPresetName
                 )"
                 >
                   Update Current Preset
@@ -91,8 +91,8 @@
                 <li
                   class="dropdown-item"
                   (click)="deletePreset(
-                  this.presetSelected,
-                  this.searchParam,
+                  this.selectedPresetId,
+                  this.currentPresetName,
                   this.allSearch())"
                 >
                   Delete Preset
@@ -300,9 +300,9 @@
                   (click)="updateCurrentPreset(
                   this.searchFilterForm,
                   this.allSearch(),
-                  this.findInPersistanDataByFilterName(this.searchParam),
+                  this.findInPersistanDataByFilterName(this.currentPresetName),
                   this.preSelectList,
-                  this.searchParam
+                  this.currentPresetName
                 )"
                 >
                   Update Current Preset
@@ -310,8 +310,8 @@
                 <li
                   class="dropdown-item"
                   (click)="deletePreset(
-                  this.presetSelected,
-                  this.searchParam,
+                  this.selectedPresetId,
+                  this.currentPresetName,
                   this.allSearch()
                 )"
                 >
@@ -346,7 +346,7 @@
             clearInput
             class="input-box form-control"
             placeholder="Enter search name"
-            [(ngModel)]="searchParam"
+            [(ngModel)]="currentPresetName"
           />
         </div>
       </div>
@@ -360,12 +360,12 @@
         Cancel
       </button>
       <button
-        [disabled]="searchParam?.length < 1"
+        [disabled]="currentPresetName?.length < 1"
         (click)="savePreselectForm(
           this.getPersistPresetSearchParsed(),
           this.searchFilterForm,
           this.preSelectList,
-          this.searchParam
+          this.currentPresetName
         ); modal.dismiss('Cross click')"
         class="btn btn-outline-dark"
       >
