--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -18,11 +18,11 @@
                 <ion-item> -->
               <ion-select
                 interface="popover"
-                placeholder="Select"
+                placeholder="Presets"
                 [(ngModel)]="selectedPresetId"
                 (ionChange)="onPreselectDDLChange($event)"
                 id="presets-select"
-                class="select-class"
+                class="custom-options"
                 [tooltip]="'presets list'"
               >
                 <!-- <ion-select-option class="select-options" value="" selected>
@@ -31,6 +31,7 @@
                 <ion-select-option
                   *ngFor="let pre of preSelectList; let i2 = index"
                   [value]="pre?.id"
+                  class="preset-option"
                 >
                   {{pre?.filterName}}
                 </ion-select-option>
