Fixing the save button(15 of july)

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -472,7 +472,8 @@ ul li.active ul {
   color: #dddddd;
 }
 .dropdown-item:hover {
-  color: #333333;
+  // color: #333333;
+  background-color: #535353;
 }
 
 ::ng-deep .modal-dialog {
