--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -152,9 +152,9 @@
                     </select>
                   </ion-col>
                   <ion-col size-lg="3" size-md="4" size-sm="3" size-xl="2">
+                    <!-- [attr.disabled]="isParam2Select? '':null" -->
                     <select
                       class="select-class"
-                      [attr.disabled]="isParam2Select? '':null"
                       formControlName="param2"
                       onselect=""
                       (change)="onParam2Change(i)"
@@ -180,7 +180,6 @@
                       *ngIf="!isDateType(i) else dates"
                     >
                     </ion-input>
-
                     <ng-template #dates>
                       <ion-input
                         clearInput
@@ -191,7 +190,6 @@
                         id="{{'datepicker' + i}}"
                       >
                       </ion-input>
-
                       <ion-input
                         clearInput
                         type="date"
@@ -203,16 +201,16 @@
                       </ion-input>
                     </ng-template>
                   </ion-col>
+                  <!-- MODIFICATION_DATE  -->
                   <ion-col
                     size-xs="12"
                     size-sm=""
                     class="input"
-                    *ngIf="allSearch().controls[i].get('param1')?.value == 'MODIFICATION_DATE'"
+                    *ngIf="allSearch().controls[i].get('param2')?.value === 'BETWEEN'"
                   >
                     <ion-input
                       clearInput
-                      type="text"
-                      class="input-box range1"
+                      class="input-box range"
                       formControlName="param4"
                       [ngClass]="!allSearch().controls[i].get('param4')?.valid && submitted ? 'error' : ''"
                       *ngIf="isDestinationNeeded(i)"
