--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -530,5 +530,18 @@ ul li.active ul {
   display: none !important;
 }
 
+// ion-date time 
+ion-datetime {
+}
+.ion-datetime-start {
+  position: absolute;
+  top: 2rem;
+  width: 100%;
 
+}
+.ion-datetime-end {
+  position: absolute;
+  left: 25rem;
+  top: 2rem;
+}
 
