--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -209,11 +209,12 @@
                         clearInput
                         class="input-box range"
                         formControlName="param3"
+                        [value]="formatDateToDisplay(allSearch().controls[i].get('param3')?.value)
+                        "
                         [ngClass]="!allSearch().controls[i].get('param3')?.valid && submitted ? 'error' : ''"
                         *ngIf="allSearch().controls[i].get('param2')?.value === 'BETWEEN'"
-                        (click)="this.datePickerInputOnClick(i)"
+                        (click)="this.datePickerInputOnClick('start',i)"
                       >
-                        {{datePickersInfo?.[i]?.start?.value}}
                         <!-- {{formatedstringStart}} -->
                         <!-- {{this.dateRangePickerStart}} -->
                       </ion-input>
@@ -235,10 +236,10 @@
                         #datetime
                         [presentation]="selectMode"
                         *ngIf="datePickersInfo?.[i]?.start?.open"
-                        [value]="datePickersInfo?.[i]?.start?.value"
+                        [value]="formatDateToDisplay(datePickersInfo?.[i]?.start?.value)"
                         class="ion-datetime-start"
                         formControlName="param3"
-                        (ionChange)="this.dateChangedStart(datetime.value,i)"
+                        (ionChange)="this.dateChanged( 'start',datetime.value,i)"
                         showDefaultButtons="true"
                       ></ion-datetime>
                       <!--  (ionCancel)="showPicker = false" -->
@@ -266,11 +267,11 @@
                     <ion-datetime
                       #datetime
                       [presentation]="selectMode"
-                      *ngIf="showPickerEnd"
-                      [value]="dateValue"
+                      *ngIf="datePickersInfo?.[i]?.end?.open"
+                      [value]="formatDateToDisplay(datePickersInfo?.[i]?.end?.value)"
                       formControlName="param4"
                       class="ion-datetime-end"
-                      (ionChange)="this.dateChangedEnd(datetime.value)"
+                      (ionChange)="this.dateChanged('end',datetime.value , i)"
                       showDefaultButtons="true"
                       (ionCancel)="showPickerEnd = false"
                     ></ion-datetime>
@@ -282,12 +283,13 @@
                       clearInput
                       class="input-box range"
                       formControlName="param4"
+                      [value]="formatDateToDisplay(allSearch().controls[i].get('param4')?.value)
+                      "
                       [ngClass]="!allSearch().controls[i].get('param4')?.valid && submitted ? 'error' : ''"
                       *ngIf="isDestinationNeeded(i)"
-                      (click)="showPickerEnd = !showPickerEnd"
+                      (click)="this.datePickerInputOnClick('end',i)"
                     >
                       <!-- {{this.dateRangePickerEnd}} -->
-                      {{formatedstringEnd}}
                     </ion-input>
                     <div></div>
                   </ion-col>
